                     central kismet for loggig/detection/etc.  Docs and
                     kismet stream capture source coming soon.
                    Added new kismet capture source, Drone.  Capture interface
                     is host:port, where the host and port are that of the 
                     Drone remote capture.
Feb 22 2003  2.9.1  Added 'TODO' file to CVS after enough people complained
                     that it wasn't there.
Feb 21 2003  2.9.1  Wrote code to mangle a WEP'd packet into a non-wep'd one
                    Added ability to write data frames to a FIFO named pipe
                     for external utilities such as Snort to do layer3+ IDS.
                    Updated documentation for FIFO IDS pipe.
Feb 19 2003  2.9.1  Development has been slow lately.  Sorry.
                    Removed pthreads requirement for gpsmap.  This should let 
                     us compile and run on *BSD systems now.
Feb 09 2003  2.9.1  Added timer scheduler for (future) plugins and WSP100
                     wakeup packets.
                    Merged modified patch from gherlein to issue WSP100 wakeups
                    Converted timed server tasks to scheduled timer tasks
Feb 07 2003  2.9.1  Added handling of filter_export
                    Fixed multi-server connecting, grouping bug still present
Feb 06 2003  2.9.1  Added masking capability to MAC addresses and filters, 
                     reduced memory usage slightly.
Feb 05 2003  2.9.1  Fixed minor gpsmap netxml-search-path bug that didn't 
                     handle netxml in the current directory.
                    Revamped filtering mechanism to be far more flexable and
                     useful.  See the config file and man page.
Feb 03 2003  2.9.1  Fixed some alerts being reported as notifications
Feb 01 2003  2.9.1  Merged patch from Pedro to fix memory faults on some BSDs.
                    Added ability to include subconfig files (containing, for